--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "fs": "0.0.1-security",
+    "ldapjs": "^2.3.1",
     "mssql": "^7.3.0",
     "tedious": "^14.0.0"
   },
